# PathForge

./: README.md  index.html  metadata.json  package-lock.json  package.json  server.ts
src/: App.tsx  index.css  store.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: AICoach.tsx  CalendarView.tsx  Dashboard.tsx  HabitTracker.tsx  InterviewPrep.tsx  JobApplications.tsx  LearningTracker.tsx  ProjectManager.tsx  ResumeManager.tsx  RoadmapTracker.tsx  Settings.tsx  Sidebar.tsx  SystemBar.tsx  TaskManager.tsx  TodayPlanner.tsx
